--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,12 @@
 name = "mongo_os"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["zhaowenhao@mhlife.vip"]
 
 [dependencies]
+bootloader = "0.9.8"
+
+
+
+
+
