--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ authors = ["zhaowenhao@mhlife.vip"]
 
 [dependencies]
 bootloader = "0.9.8"
-
+volatile = "0.2.6"
+lazy_static = { version = "1.0.2", features = ["spin_no_std"] }
+spin = "0.5.2"
 
 
 
