add timer.rs, keyboard.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ volatile = "0.2.6"
 lazy_static = { version = "1.0.2", features = ["spin_no_std"] }
 spin = "0.5.2"
 x86_64 = "0.14.10"
-
+pic8259 = "0.10.4"
+pc-keyboard = "0.7.0"
 
 
 
