--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["zhaowenhao@mhlife.vip"]
 
 [dependencies]
-bootloader = "0.9.8"
+bootloader = {version="0.9.8", features=["map_physical_memory"]}
 volatile = "0.2.6"
 lazy_static = { version = "1.0.2", features = ["spin_no_std"] }
 spin = "0.5.2"
