--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ edition = "2021"
 authors = ["zhaowenhao@mhlife.vip"]
 
 [dependencies]
-bootloader = {version="0.9.8", features=["map_physical_memory"]}
+bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
 volatile = "0.2.6"
 lazy_static = { version = "1.0.2", features = ["spin_no_std"] }
 spin = "0.5.2"
 x86_64 = "0.14.10"
 pic8259 = "0.10.4"
 pc-keyboard = "0.7.0"
-
+linked_list_allocator = "0.9.1"
 
 
